<resources>
    <string name="app_name">Design</string>
    <string name="travelling">Travelling</string>
    <string name="start_a_new_journey">Start a new Journey</string>
    <string name="walking">Walking</string>
    <string name="todo">TODO</string>
    <string name="boating">Boating</string>
    <string name="cycling">Cycling</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_sign_up_using">Or sign up using</string>
</resources>